--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="sun_yellow"></div>
         <div id="sun_red"></div>
         <div id="clouds"></div>
-        <div id="ground"></div>
+        <div id="ground"><div class="msg">Countdown to the best 4 days of your life</div></div>
         <div id="night"></div>
         <div id="stars"></div>        
         <div id="sstar"></div>
@@ -22,34 +22,44 @@
         <script type="text/javascript" src="jquery-1.3.2.js"></script>
         <script type="text/javascript" src="jquery.color.js"></script>
         <script type="text/javascript">
-            $(function() {
-                $('#sun_yellow').animate({'top':'30%','left':'15%','opacity':0.6}, 3000,function(){
+
+            function daynight(){
+                    $(function() {
+                $('#sun_yellow').animate({'top':'20%','left':'15%','opacity':0.6}, 3000,function(){
                     $('#sun_yellow').animate({'top':'5%', 'left':'45%','opacity':1}, 4000,function(){
-                        $('#sun_yellow').animate({'top':'30%', 'left':'75%','opacity':0.6}, 4000,function(){
+                        $('#sun_yellow').animate({'top':'20%', 'left':'70%','opacity':0.6}, 4000,function(){
                             $('#sun_yellow').animate({'top':'80%', 'left':'90%','opacity':0.3}, 3000,function(){
-                    $('#stars').animate({'opacity':1}, 5000,function(){
-                        $('#moon').animate({'top':'30%','left':'15%','opacity':0.6}, 3000,function(){
-                    $('#moon').animate({'top':'0%', 'left':'45%','opacity':1}, 4000,function(){
-                        $('#moon').animate({'top':'30%', 'left':'75%','opacity':0.6}, 4000,function(){
-                            $('#moon').animate({'top':'80%', 'left':'90%','opacity':0.3}, 3000,function(){
-                            $('#sstar').animate({'opacity':1}, 300);
+                    $('#stars').animate({'opacity':1}, 2500,function(){
+                        $('#moon').animate({'top':'20%','left':'15%'}, 3000,function(){
+                    $('#moon').animate({'top':'0%', 'left':'45%'}, 4000,function(){
+                        $('#moon').animate({'top':'20%', 'left':'70%'}, 4000,function(){
+                            $('#moon').animate({'top':'80%', 'left':'90%'}, 3000,function(){
+                            $('#sstar').animate({'opacity':1}, 300,function(){
+                        $('#stars').animate({'opacity':0},2500);
+                         $('#clouds').animate({'backgroundPosition':'0px 0px','opacity':1}, 10000);
+                            $('#moon').animate({'top':'70%', 'left':'0%'}, 1);
+                            $('#sun_yellow').animate({'top':'70%', 'left':'0%','opacity':0.3}, 1);
                             $('#sstar').animate({
                                 'backgroundPosition':'0px 0px','top':'15%', 'opacity':0
-                            }, 500);
-                        });});
+                            }, 500,daynight);
+                        });});});
                         });});});
                     });});});
                 });
-                $('#sky').animate({'backgroundColor':'#4F0030'}, 18000);
-                $('#clouds').animate({'backgroundPosition':'1000px 0px','opacity':0}, 30000);
-                $('#night').animate({'opacity':0.8}, 20000);
-            });
+                $('#sky').animate({'backgroundColor':'#4F0030'}, 20000,function(){
+                    $('#sky').animate({'backgroundColor':'#fff'}, 20000);
+                });
+                $('#clouds').animate({'backgroundPosition':'500px 0px','opacity':0}, 10000);
+                $('#night').animate({'opacity':0.8}, 23000,function(){
+                    $('#night').animate({'opacity':0},15000);
+                });
+            });}
+	       daynight();
         </script>
 
         <div id="moodi">
 			<div id="timer">
 			</div>
-			<div class="msg">Countdown to the best 4 days of your life</div>
 			<audio autoplay loop>
 				<source src="mood.mp3" type="audio/mpeg">
 				Your browser does not support the audio element.
