--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 document.getElementById('background_audio').muted = true;
             }
         }
-
+        var cloudx = 0;
             function daynight(){
                     $(function() {
                 $('#sun_yellow').animate({'top':'20%','left':'15%','opacity':0.6}, 3000,function(){
@@ -49,7 +49,7 @@
                             $('#moon').animate({'top':'80%', 'left':'90%'}, 3000,function(){
                             $('#sstar').animate({'opacity':1}, 300,function(){
                         $('#stars').animate({'opacity':0},2500);
-                         $('#clouds').animate({'backgroundPosition':'0px 0px','opacity':1}, 10000);
+                         $('#clouds').animate({'backgroundPosition': cloudx+'px 0px','opacity':1}, 10000);
                             $('#moon').animate({'top':'70%', 'left':'0%'}, 1);
                             $('#sun_yellow').animate({'top':'70%', 'left':'0%','opacity':0.3}, 1);
                             $('#sstar').animate({
@@ -58,22 +58,20 @@
                         });});});
                         });});});
                     });});});
-                });
+                });cloudx+=500;
                 $('#sky').animate({'backgroundColor':'#4F0030'}, 20000,function(){
                     $('#sky').animate({'backgroundColor':'#fff'}, 20000);
                 });
-                $('#clouds').animate({'backgroundPosition':'500px 0px','opacity':0}, 10000);
+                $('#clouds').animate({'backgroundPosition': cloudx+'px 0px','opacity':0}, 10000);
                 $('#night').animate({'opacity':0.8}, 23000,function(){
                     $('#night').animate({'opacity':0},15000);
                 });
             });}
 	       daynight();
-
-
         </script>
 
         <div id="moodi">
-           <div id="logounit"> <img id="logo" src="images/logounit.png"></div>
+           <div id="logounit"> <img id="logo" src="images/logounit1.png" style="-webkit-filter: drop-shadow(5px 5px 5px #222); filter: drop-shadow(5px 5px 5px #222);"></div>
 			<div id="timer">
 			</div>
 			<audio id="background_audio" autoplay="autoplay" loop>
