--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 document.getElementById('background_audio').muted = true;
             }
         }
-        var cloudx = 0;
+        var cloudx = -500;
             function daynight(){
                     $(function() {
                 $('#sun_yellow').animate({'top':'20%','left':'15%','opacity':0.6}, 3000,function(){
@@ -49,7 +49,7 @@
                             $('#moon').animate({'top':'80%', 'left':'90%'}, 3000,function(){
                             $('#sstar').animate({'opacity':1}, 300,function(){
                         $('#stars').animate({'opacity':0},2500);
-                         $('#clouds').animate({'backgroundPosition': cloudx+'px 0px','opacity':1}, 10000);
+                         $('#clouds').animate({'backgroundPosition': cloudx+500+'px 0px','opacity':1}, 10000);
                             $('#moon').animate({'top':'70%', 'left':'0%'}, 1);
                             $('#sun_yellow').animate({'top':'70%', 'left':'0%','opacity':0.3}, 1);
                             $('#sstar').animate({
@@ -58,7 +58,7 @@
                         });});});
                         });});});
                     });});});
-                });cloudx+=500;
+                });cloudx+=1000;
                 $('#sky').animate({'backgroundColor':'#4F0030'}, 20000,function(){
                     $('#sky').animate({'backgroundColor':'#fff'}, 20000);
                 });
@@ -67,7 +67,7 @@
                     $('#night').animate({'opacity':0},15000);
                 });
             });}
-	       daynight();
+	      daynight();
         </script>
 
         <div id="moodi">
